<?xml version="1.0"?>
<package format="3">
  <name>voxblox_msgs</name>
  <version>0.0.1</version>
  <description>Message definitions for Voxblox ROS 2 interface.</description>

  <author email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</author>
  <author email="marius.fehr@mavt.ethz.ch">Marius Fehr</author>

  <maintainer email="helen.oleynikova@mavt.ethz.ch">Helen Oleynikova</maintainer>
  <maintainer email="marius.fehr@mavt.ethz.ch">Marius Fehr</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</build_depend>
  <depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
